add flex,margin and space between the column

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,3 +132,8 @@ p{
     line-height:22px;
     padding:10px;
 }
+.row{
+    margin-top:5%;
+    display:flex;
+    justify-content: space-between;
+}
