add background colour to border-box and add box shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,3 +137,25 @@ p{
     display:flex;
     justify-content: space-between;
 }
+.edu-col{
+    flex-basis: 31%;
+    background:#e0ffff;
+    border-radius:10px;
+    margin-bottom:5%;
+    padding:20px 12px;
+    box-sizing:border-box;
+    transition:0.5s;
+}
+h3{
+    text-align:center;
+    font-weight: 600;
+    margin:10px 0;
+}
+.edu-col:hover{
+    box-shadow:0 0 20px 0px rgba(0,0,0,0.2);
+}
+@media(max-width:700px){
+    .row{
+        flex-direction:column;
+    }
+}
