--- a/css/styles.css
+++ b/css/styles.css
@@ -159,3 +159,10 @@ h3{
         flex-direction:column;
     }
 }
+/*-----Portfolio------*/
+.portfolio{
+    width:80%;
+    margin:auto;
+    text-align:center;
+    padding-top:50px;
+}
