--- a/css/styles.css
+++ b/css/styles.css
@@ -166,3 +166,25 @@ h3{
     text-align:center;
     padding-top:50px;
 }
+.portfolio-col{
+    flex-basis:32%;
+    border-radius:10px;
+    margin-bottom:30px;
+    position:relative;
+    overflow:hidden;
+}
+.portfolio-col img{
+    width:100;
+}
+.layer{
+    background:transparent;
+    height:100%;
+    width:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    transition:0.5s
+}
+.layer:hover{
+background:rgba(226,0,0,0.7);
+}
