--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,19 @@ h3{
 .layer:hover{
 background:rgba(226,0,0,0.7);
 }
+.layer h3{
+    width:100%;
+    font-weight:500;
+    color:#fff;
+    font-size:26px;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%);
+    position:absolute;
+    opacity:0;
+    transition:0.5s;
+}
+.layer:hover h3{
+    bottom:49%;
+    opacity:1;
+}
