--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ h3{
 }
 .portfolio-col img{
     width:100;
+    display:block;
 }
 .layer{
     background:transparent;
@@ -204,3 +205,20 @@ background:rgba(226,0,0,0.7);
     bottom:49%;
     opacity:1;
 }
+.facilities{
+    width: 80%;
+    margin:auto;
+    text-align:center;
+    padding-top:100px;
+}
+.facilities-col{
+    flex-basis:31%;
+    border-radius:10px;
+    margin-bottom:5%;
+    text-align:left;
+}
+.facilities-col image{
+    width:100%;
+    border-radius:10px;
+}
+
