--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ h3{
     position:relative;
     overflow:hidden;
 }
-.portfolio-col img{
+.portfolio-col images{
     width:100;
     display:block;
 }
@@ -205,6 +205,9 @@ background:rgba(226,0,0,0.7);
     bottom:49%;
     opacity:1;
 }
+
+/*------facilities------*/
+
 .facilities{
     width: 80%;
     margin:auto;
@@ -221,4 +224,52 @@ background:rgba(226,0,0,0.7);
     width:100%;
     border-radius:10px;
 }
+.facilities-col p{
+    padding:0;
+}
+.facilities-col h3{
+    margin-top:16px;
+    margin-bottom:15px;
+    text-align:left;
+}
 
+/*-----Testimonial-----*/
+
+.testimonials{
+    width:80%;
+    margin:auto;
+    padding-top:100px;
+    text-align:center;
+}
+.testimonials-col{
+    flex-basis:44%;
+    border-radius:10px;
+    margin-bottom:5%;
+    text-align:left;
+    background:#e0ffff;
+    padding:25px;
+    cursor:pointer;
+    display:flex;
+}
+testimonials-col images{
+    height:40px;
+    margin-left:5px;
+    margin-right:30px;
+    border-radius:50%;
+}
+.testimonials-col p{
+    padding:0;
+}
+.testimonials-col h3{
+    margin-top:15px;
+    text-align:left;
+}
+.testimonials-col .fa{
+    color:#f44336;
+}
+@media(max-width:700px){
+    .testimonials-col images{
+        margin-left:0px;
+        margin-right:15px;
+    }
+}
