--- a/css/styles.css
+++ b/css/styles.css
@@ -273,3 +273,42 @@ testimonials-col images{
         margin-right:15px;
     }
 }
+/*------Contact Me------*/
+
+.contact{
+    margin:100px auto;
+    width:80%;
+    background:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("../images/hire.png") no-repeat fixed;
+    background-position:center;
+    background-size:cover;
+    border-radius:10px;
+    text-align:center;
+    padding:100px 0;
+}
+
+.contact{
+    color:#fff;
+    margin-bottom:40px;
+}
+.hire-btn{
+    display:inline-block;
+    margin-top:60px;
+    text-decoration: none;
+    color:#fff;
+    border:1px solid #fff;
+    padding:12px 34px;
+    font-size:13px;
+    background:transparent;
+    position:relative;
+    cursor:pointer;
+}
+.hire-btn:hover{
+    border:1px solid #FFFF00;
+    background:#FFFF00;
+    transition:1s;
+    }
+    @media(max-width:700px){
+        .contact h1{
+            font-size:24px;
+        }
+    }
