--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ nav .fa{
        padding:30px;
    }
 }
-/*-----course -----*/
+/*-----educational background -----*/
 .edu{
     width:80%;
     margin:auto;
@@ -311,4 +311,21 @@ testimonials-col images{
         .contact h1{
             font-size:24px;
         }
-    }
+}
+
+        /*------footer-------*/
+.footer{
+    width:100%;
+    text-align:center;
+    padding:30px 0;
+}
+
+.footer h4{
+    margin-bottom:25px;
+    margin-top:20px;
+    font-weight:600;
+}
+
+.fa-users{
+    color:#f44336;  
+}
