--- a/css/styles.css
+++ b/css/styles.css
@@ -329,3 +329,17 @@ testimonials-col images{
 .fa-users{
     color:#f44336;  
 }
+
+/*------------about us page----------*/
+.sub-header{
+    height:50vh;
+    width:100%;
+    background:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("../images/about.jpg") no-repeat fixed;
+    background-position:center;
+    background-size:cover;
+    text-align:center;
+    color:#fff;
+}
+.sub-header h1{
+    margin-top:100px;
+}
