--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ nav img{
     font-size:13px;
 }
 .nav-links ul li::after{
-    content: '';
     width:0%;
     height:2px;
     background:	#FFFF00;
@@ -341,5 +340,50 @@ testimonials-col images{
     color:#fff;
 }
 .sub-header h1{
-    margin-top:100px;
+    margin-top:5px;
+
+}
+.about-me{
+    width:80%;
+    margin:auto;
+    padding-top:80px;
+    padding-bottom:50px;
+}
+.about-col{
+    flex-basis:48%;
+    padding:30px 2px;
+    }
+.about-col img{
+        width:100%;
+    }
+.about-col h1{
+    padding-top:0;
+}
+.about-col p{
+    padding:15px 0 25px;
+}
+.github-btn{
+    display:inline-block;
+    margin-top:60px;
+    text-decoration: none;
+    color:#fff;
+    border:1px solid #fff;
+    padding:12px 34px;
+    font-size:13px;
+    background:transparent;
+    position:relative;
+    cursor:pointer;
+}
+.github-btn:hover{
+    border:1px solid #FFFF00;
+    background:#FFFF00;
+    transition:1s;
+    }
+.yellow-btn{
+    border: 1px solid #FFFF00;
+    background:transparent;
+    color:#FFFF00;
+}
+.yellow-btn:hover{
+    color:#fff;
 }
